projects/compiler/test/parser/return_error_nonexpr.out
Error at %FILE_NAME%:1:8
Unexpected token 'val':
  |  return val a = 3
            ^